[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asm"
version = "0.1.0"
description = "Agent Skill Manager — SOTA expertise for IDE agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.28",
    "langgraph>=1.1.3",
    "litellm>=1.50",
    "msgpack>=1.1.0",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "tomlkit>=0.12",
]

[project.urls]
Homepage = "https://github.com/gil-kapel/asm"
Repository = "https://github.com/gil-kapel/asm"
Changelog = "https://github.com/gil-kapel/asm/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
]
cloud = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[project.scripts]
asm = "asm.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/asm"]
